Closed Bug 1142338 Opened 10 years ago Closed 10 years ago

[jsdbg2] Census shouldn't us JS::ubi::Node::as<T>

Categories

(Core :: JavaScript Engine, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla39
Tracking Status
firefox39 --- fixed

People

(Reporter: fitzgen, Assigned: fitzgen)

References

Details

Attachments

(1 file)

Because as<T> won't be available in ubi nodes constructed from deserialized heap snapshots. We should only use the methods on JS::ubi::Node, and add new methods (that can be implemented by deserialized heap snapshot ubi node specializations) if functionality is missing.
Comment on attachment 8576336 [details] [diff] [review] Debugger.Memory's census shouldn't use JS::ubi::Node::as<T> Review of attachment 8576336 [details] [diff] [review]: ----------------------------------------------------------------- Uh... looks about right?
Attachment #8576336 - Flags: review?(sphink) → review+
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla39
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: